--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^6.2.3",
     "@storybook/addon-actions": "^6.2.3",
+    "@storybook/addon-docs": "^6.2.3",
     "@storybook/addon-essentials": "^6.2.3",
     "@storybook/addon-links": "^6.2.3",
     "@storybook/addon-storyshots": "^6.2.3",
+    "@storybook/addon-storysource": "^6.2.3",
     "@storybook/node-logger": "^6.2.3",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.3",
