--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "generate-component": "node ./scripts/generateComponent/index.js"
   },
   "eslintConfig": {
     "extends": [
@@ -71,15 +72,20 @@
     "@storybook/addon-docs": "^6.2.3",
     "@storybook/addon-essentials": "^6.2.3",
     "@storybook/addon-links": "^6.2.3",
+    "@storybook/addon-options": "^5.3.21",
     "@storybook/addon-storyshots": "^6.2.3",
     "@storybook/addon-storysource": "^6.2.3",
     "@storybook/node-logger": "^6.2.3",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.3",
+    "@types/styled-components": "^5.1.9",
+    "babel-plugin-styled-components": "^1.12.0",
     "husky": "^6.0.0",
+    "inquirer": "^8.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.2",
+    "snake-case": "^3.0.4",
     "ts-jest": "^26.5.4",
     "tsconfig-paths-webpack-plugin": "^3.5.1"
   },
