--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "generate-component": "node ./scripts/generateComponent/index.js"
+    "generate-component": "node ./scripts/generateComponent/index.js",
+    "csv2json": "csvtojson ./src/data/csv/ability-Peregre.csv > ./src/data/json/ability.json | csvtojson ./src/data/csv/wording-Peregre.csv > ./src/data/json/wording.json | csvtojson ./src/data/csv/weapon-Peregre.csv > ./src/data/json/weapon.json"
   },
   "eslintConfig": {
     "extends": [
@@ -81,6 +82,7 @@
     "@storybook/react": "^6.2.3",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
+    "csvtojson": "^2.0.10",
     "husky": "^6.0.0",
     "inquirer": "^8.0.0",
     "lint-staged": "^10.5.4",
