--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-use": "^17.2.4",
     "recoil": "^0.2.0",
     "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
