--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-use": "^17.2.4",
@@ -79,6 +80,8 @@
     "@storybook/node-logger": "^6.2.3",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.3",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.1",
+    "@types/react-router-dom": "^5.1.7",
     "@types/recoil": "^0.0.1",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
@@ -87,6 +90,7 @@
     "inquirer": "^8.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "react-router-dom": "^5.2.0",
     "react-test-renderer": "^17.0.2",
     "snake-case": "^3.0.4",
     "ts-jest": "^26.5.4",
