--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-genie": "^0.2.2",
+    "react-genie-styled-components": "^0.1.1",
     "react-scripts": "4.0.3",
     "react-use": "^17.2.4",
     "recoil": "^0.2.0",
