--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@storybook/addon-options": "^5.3.21",
     "@storybook/addon-storyshots": "^6.2.3",
     "@storybook/addon-storysource": "^6.2.3",
+    "@storybook/addon-viewport": "^6.2.9",
     "@storybook/node-logger": "^6.2.3",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.3",
