--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animations": "^1.0.0",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-genie": "^0.2.2",
     "react-genie-styled-components": "^0.1.1",
@@ -70,6 +71,7 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.3",
     "@types/react-anchor-link-smooth-scroll": "^1.0.1",
+    "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/recoil": "^0.0.1",
     "@types/styled-components": "^5.1.9",
